Added initial implementation for TodoListService.

--- a/src/main/resources/ValidationMessages_en.properties
+++ b/src/main/resources/ValidationMessages_en.properties
@@ -8,3 +8,4 @@ email.empty=Email should not be empty.
 email.invalid=Email should be valid.
 password.empty=Password should not be empty.
 password.too.short=Password is too short.
+todo.list.null=List was not provided.
