--- a/src/main/resources/ValidationMessages_el.properties
+++ b/src/main/resources/ValidationMessages_el.properties
@@ -8,3 +8,4 @@ email.empty=Το email δεν μπορεί να είναι κενό.
 email.invalid=Μη έγκυρο email.
 password.empty=Ο κωδικός δεν μπορεί να είναι κενός.
 password.too.short=Πολύ μικρό μέγεθος κωδικου.
+todo.list.null=Δεν δόθηκε λίστα.
