Added integration test for TodoService. Fixes identified from Integration testing.

--- a/src/main/resources/ValidationMessages_el.properties
+++ b/src/main/resources/ValidationMessages_el.properties
@@ -9,3 +9,4 @@ email.invalid=Μη έγκυρο email.
 password.empty=Ο κωδικός δεν μπορεί να είναι κενός.
 password.too.short=Πολύ μικρό μέγεθος κωδικου.
 todo.list.null=Δεν δόθηκε λίστα.
+todo.null=Δεν δόθηκε εργασία.
