--- a/src/main/resources/ValidationMessages_en.properties
+++ b/src/main/resources/ValidationMessages_en.properties
@@ -9,3 +9,4 @@ email.invalid=Email should be valid.
 password.empty=Password should not be empty.
 password.too.short=Password is too short.
 todo.list.null=List was not provided.
+todo.null=Todo was not provided.
