Updated error messages. Minor change on UnauthorizedException.

--- a/src/main/resources/messages_el.properties
+++ b/src/main/resources/messages_el.properties
@@ -1,3 +1,5 @@
 # suppress inspection "UnusedProperty" for whole file
 list.not.found=Η λίστα δεν βρέθηκε.
 todo.not.found=Η εργασία δεν βρέθηκε.
+different.owner=Δεν μπορείτε να επεξεργαστείτε το αντικείμενο αυτό.
+unauthorized=Δεν έχετε πρόσβαση.
