Updated GlobalExceptionHandler and added missing error messages.

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,5 +1,6 @@
 # suppress inspection "UnusedProperty" for whole file
 list.not.found=List was not found.
 todo.not.found=Todo was not found.
-different.owner=You cannot change this item.
 unauthorized=Access denied.
+does.not.exist=Does not exist.
+already.exists=Already exists.
