--- a/src/main/resources/messages_el.properties
+++ b/src/main/resources/messages_el.properties
@@ -1,5 +1,6 @@
 # suppress inspection "UnusedProperty" for whole file
 list.not.found=Η λίστα δεν βρέθηκε.
 todo.not.found=Η εργασία δεν βρέθηκε.
-different.owner=Δεν μπορείτε να επεξεργαστείτε το αντικείμενο αυτό.
 unauthorized=Δεν έχετε πρόσβαση.
+does.not.exist={0} does not exist.
+already.exists={0} already exists.
