Minor change regarding validation messages.

--- a/src/main/resources/ValidationMessages_en.properties
+++ b/src/main/resources/ValidationMessages_en.properties
@@ -1,6 +1,7 @@
 # suppress inspection "UnusedProperty" for whole file
 id.min=ID must be positive.
 id.null=ID should not be empty.
+user.id.null=user ID should not be empty.
 last.modified.date.null=Last modified date should not be empty.
 create.date.null=Created date should not be empty.
 title.empty=Title should not be empty.
