--- a/src/main/resources/ValidationMessages_el.properties
+++ b/src/main/resources/ValidationMessages_el.properties
@@ -1,6 +1,7 @@
 # suppress inspection "UnusedProperty" for whole file
 id.min=Το ID πρέπει να είναι θετικό.
 id.null=Το ID δεν μπορεί να είναι κενό.
+user.id.null=Το ID του χρήστη δεν μπορεί να είναι κενό.
 create.date.null=Η ημερομηνία δημιουργίας δεν μπορεί να είναι κενή.
 last.modified.date.null=Η ημερομηνία τελευταίας επεξεργασίας δεν μπορεί να είναι κενή.
 title.empty=Ο τίτλος δεν μπορεί να είναι κενός.
