Added Integration tests for TodoListController

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -2,5 +2,12 @@
 list.not.found=List was not found.
 todo.not.found=Todo was not found.
 unauthorized=Access denied.
-does.not.exist=Does not exist.
-already.exists=Already exists.
+does.not.exist={0} does not exist.
+already.exists={0} already exists.
+cannot.process.request=Request can't be processed.
+resource.not.found=No content found at the specified URL.
+faulty.message.body=Faulty Request Body.
+media.type.not.supported=The content type is not supported.
+invalid.data.access=ID cannot be empty.
+method.not.supported=Method not supported.
+internal.server.error=Internal server Error.
