--- a/src/main/resources/messages_el.properties
+++ b/src/main/resources/messages_el.properties
@@ -2,5 +2,12 @@
 list.not.found=Η λίστα δεν βρέθηκε.
 todo.not.found=Η εργασία δεν βρέθηκε.
 unauthorized=Δεν έχετε πρόσβαση.
-does.not.exist={0} does not exist.
-already.exists={0} already exists.
+does.not.exist={0} δεν υπάρχει.
+already.exists={0} υπάρχει ήδη.
+cannot.process.request=Το αίτημα δεν μπορεί να διεκπεραιωθεί.
+resource.not.found=Δεν βρέθηκε περιεχόμενο στο συγκεκριμένο URL.
+faulty.message.body=Το σώμα του αιτήματος είναι εσφαλμένο.
+media.type.not.supported=Ο τύπος του περιεχομένου δεν υποστηρίζεται.
+invalid.data.access=Το ID δεν μπορεί να είναι κενό.
+method.not.supported=Η μέθοδος δεν υποστηρίζεται.
+internal.server.error=Internal server Error.
